dev.thihup.jvisualg.examples/src/main/resources/dev/thihup/jvisualg/examples/errors/wrongArguments/funcoesPadrao.alg
algoritmo "erro procedimento funcao abs"


inicio

    escreval(abs(-30,20))

fimalgoritmo
